--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,6 +8,13 @@
   <body>
     <h1>Week 5 Assignment - Part 3</h1>
     <p>See console for output.</p>
+    <ul>
+      <li>For my extra function, it's able to take one, two, or all three of the keys
+          inside the object and return any album that has a matching key-value pair as
+          the function argument. If I test two of the same keys, with different values,
+          it only returns the final key-value pair match. How could I make it able to
+          search for multiple of the same key?</li>
+    </ul>
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
